# cashu-tool

./: .gitignore  Cargo.toml  README.md
LICENSES/: nostr-tool-mit
src/: main.rs
src/sub_commands/: check_spent.rs  create_locked_token.rs  create_token.rs  decode_token.rs  melt.rs  mint.rs  mint_info.rs  mod.rs  receive.rs  restore.rs
