[package]
name = "cashu-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cashu-sdk = { path = "../cashu-crab/great_clean_up/crates/cashu-sdk", features = ["all-nuts"] }
clap = { version = "4.4.8", features = ["derive", "env"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
