[package]
name = "cashu-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cdk = { git = "https://github.com/thesimplekid/cashu-crab", rev = "664776f1", default-features = false, features = ["wallet", "all-nuts", "redb"] }
# cdk = { path = "../cashu-crab/use_reqwest/crates/cdk", features = ["wallet", "mint", "all-nuts", "redb"] }
clap = { version = "4.4.8", features = ["derive", "env"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile]

[profile.ci]
inherits = "dev"
incremental = false
debug = "line-tables-only"
lto = "off"
